# timebot

./: .gitignore  LICENSE  README.md  buildozer.spec  setup.cfg  setup.py  watch.py
app/: .gitignore  api.py  app.db  buildozer.spec  config.txt  data.py  day.py  db.py  entry.py  files.py  hours.py  main.py  my_config.txt  project.py  repository.py  sample.py  service.py  setting.py  task.py  test_data.py  test_day.py  test_db.py  test_entry.py  test_hours.py  test_repository.py  test_service.py  test_task.py  test_timecard.py  test_utils.py  timecard.py  tip.py  utils.py
app/libs/baseclass/: _version.py  accounts_screen.py  bills_screen.py  budgets_screen.py  datepicker.py  empty_screen.py  entry_screen.py  icons.py  orienter.py  overview_screen.py  piechart.py  pre_splash_screen.py  projects_screen.py  root_screen.py  settings_screen.py  share_screen.py  spinner.py  splash_screen.py  tabnavigation.py  task_edit.py  tasks_screen.py  timecards_screen.py  timepicker.py  undo_dialog.py  welcome_screen.py
app/libs/kv/: accounts_screen.kv  bills_screen.kv  budgets_screen.kv  datepicker.kv  empty_screen.kv  entry_screen.kv  overview_screen.kv  piechart.kv  pre_splash_screen.kv  projects_screen.kv  root_screen.kv  settings_screen.kv  share_screen.kv  spinner.kv  splash_screen.kv  task_edit.kv  tasks_screen.kv  timecards_screen.kv  timepicker.kv  undo_dialog.kv  welcome_screen.kv
timebot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
